--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Path to assets for use with the file-url function
+// in the govuk frontend toolkit"s url-helpers partial
+$path: "";
+$jui-assets-path : "";
+
+$govuk-global-styles: true;
+@import "~govuk-frontend/all";
+@import "~@hmcts/frontend/all";
+@import "../projects/hmcts-form-builder/src/lib/assets/sass/application";
