--- a/projects/hmcts-form-builder/src/lib/components/validation-error-formgroup/validation-error-formgroup.component.html
+++ b/projects/hmcts-form-builder/src/lib/components/validation-error-formgroup/validation-error-formgroup.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="group" *ngIf="isFormGroupInvalid(group, validationErrorId)" >
-    <span id="directions-error" class="govuk-error-message">
+    <span id="{{validationErrorId}}" class="govuk-error-message">
         <ng-content></ng-content>
     </span>
 </ng-container>
